force-app/main/default/objects/Experience__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>The name of the company at which you gained the experience.</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>