force-app/main/default/objects/Experience__c/fields/Date_Ended__c.field-meta.xml
<CustomField>
    <fullName>Date_Ended__c</fullName>
    <description>The date this experience ended.</description>
    <label>Date Ended</label>
    <type>Date</type>
</CustomField>