force-app/main/default/objects/Experience__c/fields/Date_Started__c.field-meta.xml
<CustomField>
    <fullName>Date_Started__c</fullName>
    <description>The date this experience began.</description>
    <label>Date Started</label>
    <type>Date</type>
</CustomField>