force-app/main/default/objects/Experience__c/fields/Experience_Detail__c.field-meta.xml
<CustomField>
    <fullName>Experience_Detail__c</fullName>
    <description>Enter the details of your experience on separate lines.</description>
    <label>Experience Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>